# C-Doodles

./: BitChecker.cc  Bubble_Sort.cc  CMakeLists.txt  Caesar_Cypher.cc  Connect_Four.cc  Connection.cc  ConnectionTest.cc  Disjoint.cc  DisplayFloatingBits.c  DisplayFloatingNumber.c  Encoding_Test.cc  Enum.cc  Float_to_IEEE_Representation.c  GetAllRegexMatches.cc  Hacking Guide.org  Homework02_06.cc  Integer_to_English.cc  Japanese_Regex_Test.cc  LICENSE  List.cc  ListTest.cc  Mark_Example.cc  My_Vector.cc  My_Vector.h  Newt.cpp  Nothing.c  Problem2_60.c  Problem2_74.c  Program_06.c  README.md  README.org  Ram_Eater.cc  RegexTest.cc  SelfReproduced.cc  Snake.cc  Snake.h  Split.cc  Substring.cc  Test.c  TestCopying.cc  (+11 more)
src/: FileLogger.hpp  Logger.hpp
src/Algorithms/: Disjoint.cc  Split.cc  TupleComparison.cc  URLify_String.cc  WeirdFunction.cc
src/Bitlevel-Programs/: BitChecker.cc  Problem2_60.c  Problem2_74.c
src/Chrono/: CalendarTest.cc
src/Database/: ConnectionTest.cc
src/Games/: Snake.cc  Snake.h  TicTacToe.cc
src/Multithreading/: ExampleThread.cc
src/Regex/: GetAllRegexMatches.cc  Japanese_Regex_Test.cc
src/STL-Implementations/: Array.hpp  My_Vector.h  TestArray.cc  Test_MyVector.cc
src/Standalone/: Caesar_Cipher.cc  Caesar_Cypher.cc  Check_Strings_For_Digits.c  Integer_to_English.cc  Mark_Example.cc
src/Test-Programs/: Append.cc  BitChecker.cc  DequeTest.cc  DumbSet.cc  Foo.cc  HashMap.cc  Input.txt  Itoa.cc  LinkTest.cc  Map.cc  Ram_Eater.cc  Remember.cc  TestCopying.cc  TestFunction.c  TestLogger.cc
src/Test-Programs/DummyHashMap/: MapDifference.cc  TestHashMap.cc
src/Test-Programs/MapDifference/: Example.cc~  Item.hpp  MapDifference.cc
